Add handler  cashier

--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BaseRequest.cs" />
     <Compile Include="BaseModel.cs" />
     <Compile Include="BaseResponse.cs" />
+    <Compile Include="Cashier\CashierModel.cs" />
     <Compile Include="Document\DocumentModel.cs" />
     <Compile Include="Form\FormExamineAttachmentModel.cs" />
     <Compile Include="Form\FormExamineMedicineModel.cs" />
