--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -80,6 +80,8 @@
     <Compile Include="Form\FormExamineLabModel.cs" />
     <Compile Include="Form\FormExamineModel.cs" />
     <Compile Include="Form\FormMedicalModel.cs" />
+    <Compile Include="Letter\LabReferenceLetterModel.cs" />
+    <Compile Include="Letter\LetterModel.cs" />
     <Compile Include="MappingMaster\ClinicPoliModel.cs" />
     <Compile Include="MappingMaster\OrganizationPrivilegeModel.cs" />
     <Compile Include="MappingMaster\RolePrivilegeModel.cs" />
