--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -226,6 +226,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
+    <Compile Include="Controllers\LettersController.cs" />
     <Compile Include="Controllers\ParamedicController.cs" />
     <Compile Include="Controllers\DoctorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -1457,10 +1458,12 @@
     <Content Include="Views\MasterData\CreateOrEditPoliService.cshtml" />
     <Content Include="Views\Cashier\Detail.cshtml" />
     <Content Include="Views\Cashier\Invoice.cshtml" />
+    <Content Include="Views\Letters\SuratRujukan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="fileDoc\Photo\" />
+    <Folder Include="Rdlcs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
