--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -128,6 +128,9 @@
     <Compile Include="DataRepository\LabItemCategory.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataRepository\Letter.cs">
+      <DependentUpon>KlinikModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataRepository\Log.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
@@ -237,6 +240,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>KlinikModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="App.Config" />
     <None Include="DataRepository\KlinikModel.edmx.diagram">
       <DependentUpon>KlinikModel.edmx</DependentUpon>
     </None>
