--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1347,6 +1347,7 @@
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile2.pubxml" />
+    <None Include="Properties\PublishProfiles\kliniktest - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\KlinikWeb - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\SIMRS - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
