--- a/Klinik.Web/Web.Release.config
+++ b/Klinik.Web/Web.Release.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=simrs.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdb.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
