--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -227,6 +227,7 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Base\BaseController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FarmasiController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
     <Compile Include="Controllers\ParamedicController.cs" />
@@ -1467,11 +1468,10 @@
     <Content Include="Views\MasterData\CreateOrEditPoliService.cshtml" />
     <Content Include="Views\Cashier\Detail.cshtml" />
     <Content Include="Views\Cashier\Invoice.cshtml" />
-
     <Content Include="Views\Letters\SuratRujukan.cshtml" />
     <Content Include="Views\Letters\PrintSuratRujukanLabKeluar.cshtml" />
     <Content Include="Views\Letters\ExportSuratRujukanLabKeluar2Pdf.cshtml" />
-
+    <Content Include="Views\Farmasi\PatientList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
