--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Datalist" version="6.2.1" targetFramework="net461" />
   <package id="Datalist.Core" version="6.2.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EPPlus" version="4.5.3.2" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
