Bug Fix feature Pre Examine

--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -230,6 +230,7 @@
       <LastGenOutput>KlinikModel.cs</LastGenOutput>
     </Content>
     <Content Include="DB\DBKlinik_24072019.sql" />
+    <Content Include="DB\DB_GenScripts_20190810.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
