--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CommonUtils.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="CustomAuthorizeAttribute.cs" />
+    <Compile Include="Enumerations\CallStatusEnum.cs" />
     <Compile Include="Enumerations\ClinicEnums.cs" />
     <Compile Include="Enumerations\PharmacyStatusEnum.cs" />
     <Compile Include="Enumerations\LabTypeEnum.cs" />
