--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -41,6 +41,8 @@
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Rotativa" version="1.7.3" targetFramework="net461" />
+  <package id="Rotativa.Core" version="2.0.0" targetFramework="net461" />
+  <package id="Rotativa.MVC" version="2.0.3" targetFramework="net461" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
