--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Cashier\CashierModel.cs" />
     <Compile Include="Cashier\FormMedicalModel.cs" />
     <Compile Include="DeliveryOrderDetail\DeliveryOrderDetailModel.cs" />
+    <Compile Include="DeliveryOrderPusatDetail\DeliveryOrderPusatDetailModel.cs" />
+    <Compile Include="DeliveryOrderPusat\DeliveryOrderPusatModel.cs" />
     <Compile Include="DeliveryOrder\DeliveryOrderModel.cs" />
     <Compile Include="Document\DocumentModel.cs" />
     <Compile Include="MasterData\GudangModel.cs" />
