--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -100,6 +100,10 @@
     <Compile Include="MasterData\Gudang\GudangRequest.cs" />
     <Compile Include="MasterData\Gudang\GudangResponse.cs" />
     <Compile Include="MasterData\Gudang\GudangValidator.cs" />
+    <Compile Include="MasterData\Vendor\VendorHandler.cs" />
+    <Compile Include="MasterData\Vendor\VendorRequest.cs" />
+    <Compile Include="MasterData\Vendor\VendorResponse.cs" />
+    <Compile Include="MasterData\Vendor\VendorValidator.cs" />
     <Compile Include="Pharmacy\PharmacyHandler.cs" />
     <Compile Include="Pharmacy\PharmacyHandlerRequest.cs" />
     <Compile Include="Pharmacy\PharmacyHandlerResponse.cs" />
